--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load": "^4.0.1",
     "react-scripts": "5.0.1",
     "the-new-css-reset": "^1.7.3",
     "typescript": "^4.8.4"
