--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-lazy-load": "^4.0.1",
     "react-scripts": "5.0.1",
     "the-new-css-reset": "^1.7.3",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "wft-geodb-js-client": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
